#109: if default chrome profile does not exist, create it